src/test/run-pass/rfcs/rfc-1937-termination-trait/termination-trait-for-box-dyn-error.rs
// run-pass
use std::error::Error;

fn main() -> Result<(), Box<dyn Error>> {
    Ok(())
}
